--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <br><br><br>
   <!---Download Button--->
   <div class="download_button">
-    <button class="Download-button">
+    <button class="Download-button" id="ticket">
       <a href="#" style="color: rgb(120, 0, 120); text-decoration: none; font-size: 200%;">จองคิว</a>
     </button>
   </div>
@@ -51,10 +51,10 @@
   <div class="flex-container" id="home">
     
     <div class="flex-item-left">
-      <p class="p-medium-3">ประวัติหมอหมึก</p>
+      <p class="p-medium-3" id="about">ประวัติหมอหมึก</p>
       <p class="p-small"><br>หมอหมึกเป็นนักพยากรณ์ที่ชำนาญด้านการทำนายดวงด้วยลูกแก้วพยากรณ์ ไพ่ทาโร่ และการดูลายมือ<br></p>
       <p class="p-small">ด้วยความสามารถที่หลากหลาย<br></p>
-      <p class="p-small">ทำให้หมอหมีสามารถเลือกวิธีการทำนายที่เหมาะกับแต่ละบุคคลเพื่อให้ได้ผลลัพธ์แม่นยำที่สุด</p>
+      <p class="p-small">ทำให้หมอหมึกสามารถเลือกวิธีการทำนายที่เหมาะกับแต่ละบุคคลเพื่อให้ได้ผลลัพธ์แม่นยำที่สุด</p>
     </div>
       
     <div class="flex-item-right">
